--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'koin'
 }
 
 android {
@@ -53,12 +52,33 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
-// Koin for Android
+
+
+   def koin_version = '2.2.1'
+    // Koin for Android
     implementation "org.koin:koin-android:$koin_version"
-// Koin Android Scope features
+
+    // Koin Android Scope features
     implementation "org.koin:koin-android-scope:$koin_version"
-// Koin Android ViewModel features
+    // Koin Android ViewModel features
     implementation "org.koin:koin-android-viewmodel:$koin_version"
-// Koin Android Experimental features
+    // Koin Android Experimental features
     implementation "org.koin:koin-android-ext:$koin_version"
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //interceptor
+
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
+    //coroutines
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-rc01"
+    def lifecycle_version = "2.2.0-rc01"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
